--- a/index.html
+++ b/index.html
@@ -90,94 +90,97 @@
                 </div>           
             </div>
         </section>
-        <section class="o-row o-row--lg o-row--neutral-x-light">
+        <section class="o-row o-row--lg o-row-background">
             <div class="o-container">
-                <article class="o-layout o-layout--gutter">
-                    <figure class="o-layout__item u-1-of-2-bp3">
-                        <picture>
-                            <source srcset="img/jpg/img-1.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-1.jpg" media="(min-width: 768px)">
-                            <source srcset="img/jpg/img-1-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-1-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>Dr. Jeremy McDuffie, Tennessee Oncology</figcaption>
-                    </figure>
-                    <div class="o-layout__item u-1-of-2-bp3 o-layout--justify-center o-col">
-                        <header class="c-title-icon">
-                            <svg class="c-title-icon__icon" xmlns="http://www.w3.org/2000/svg" viewBox="1169 1296 112 112">
-                                <g id="stethoscope-1" transform="translate(1168.5 1295.9)">
-                                    <path id="Path_3" data-name="Path 3" class="c-title-icon__path" d="M15.554,12.208a6.054,6.054,0,1,1,6.054-6.054A6.072,6.072,0,0,1,15.554,12.208Zm0-9.081a2.973,2.973,0,0,0-3.027,3.027,3.027,3.027,0,0,0,6.054,0A2.973,2.973,0,0,0,15.554,3.127Z" transform="translate(0.081)"/>
-                                    <path id="Path_4" data-name="Path 4" class="c-title-icon__path" d="M51.554,12.208a6.054,6.054,0,1,1,6.054-6.054A6.072,6.072,0,0,1,51.554,12.208Zm0-9.081a2.973,2.973,0,0,0-3.027,3.027,3.027,3.027,0,0,0,6.054,0A2.973,2.973,0,0,0,51.554,3.127Z" transform="translate(0.405)"/>
-                                    <path id="Path_5" data-name="Path 5" class="c-title-icon__path" d="M33.8,75.735A33.33,33.33,0,0,1,.5,42.438V15.195A10.593,10.593,0,0,1,11.095,4.6V7.627a7.623,7.623,0,0,0-7.568,7.568V42.438a30.27,30.27,0,0,0,60.541,0V15.195A7.623,7.623,0,0,0,56.5,7.627V4.6A10.593,10.593,0,0,1,67.095,15.195V42.438A33.33,33.33,0,0,1,33.8,75.735Z" transform="translate(0 0.041)"/>
-                                    <path id="Path_6" data-name="Path 6" class="c-title-icon__path" d="M39.608,82.695H36.581V75.127H30.527v7.568H27.5V72.1H39.608Z" transform="translate(0.243 0.649)"/>
-                                    <path id="Path_7" data-name="Path 7" class="c-title-icon__path" d="M58.436,112.019A26.548,26.548,0,0,1,32,85.482v-2.22h3.027v2.22a23.409,23.409,0,0,0,46.818,0V19.695a10.595,10.595,0,0,1,21.189,0V92.343h-3.027V19.695a7.568,7.568,0,1,0-15.135,0V85.482A26.419,26.419,0,0,1,58.436,112.019Z" transform="translate(0.284 0.081)"/>
-                                    <path id="Path_8" data-name="Path 8" class="c-title-icon__path" d="M101.095,111.289a10.595,10.595,0,1,1,10.595-10.595A10.593,10.593,0,0,1,101.095,111.289Zm0-18.162a7.568,7.568,0,1,0,7.568,7.568A7.623,7.623,0,0,0,101.095,93.127Z" transform="translate(0.811 0.811)"/>
-                                    <path id="Path_9" data-name="Path 9" class="c-title-icon__path" d="M101.03,103.959a3.33,3.33,0,1,1,3.33-3.33A3.359,3.359,0,0,1,101.03,103.959Zm0-3.632a.3.3,0,1,0,.3.3A.268.268,0,0,0,101.03,100.327Z" transform="translate(0.876 0.876)"/>
-                                    <path id="Path_10" data-name="Path 10" class="cls-1" d="M33.716,66.519A24.287,24.287,0,0,1,9.5,42.3V19.6h3.027V42.3A21.187,21.187,0,0,0,33.716,63.492Z" transform="translate(0.081 0.176)"/>
-                                    <rect id="Rectangle_20" data-name="Rectangle 20" class="cls-1" width="3.027" height="22.703" transform="translate(54.986 19.776)"/>
-                                </g>
-                            </svg>
-                            <h2 class="c-lead c-lead--xxl">
-                                For Community <br>
-                                Oncology
-                            </h2>
-                        </header>
-                        <div class="u-max-width-sm">
-                            <p class="c-lead c-lead--lg">
-                                OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially successful.
-                            </p>
-                            <p>
-                                <a class="c-link-cta" href="#!">Learn more</a>
-                            </p>
+                <article>
+                    <div class="o-section o-section--lg">
+                        <div class="o-layout">
+                            <div class="o-layout__item u-1-of-2-bp3">
+                                <figure>
+                                    <picture>
+                                        <source srcset="img/jpg/img-1.jpg" media="(min-width: 992px)">
+                                        <source srcset="img/jpg/img-1-landscape@2x.jpg" media="(min-width: 576px)">
+                                        <img src="img/jpg/img-1-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                    </picture>
+                                    <figcaption>Dr. Jeremy McDuffie, Tennessee Oncology</figcaption>
+                                </figure>
+                            </div> 
+                        <div class="o-layout__item u-1-of-2-bp3 o-layout__centering">
+                            <header>
+                                <h2 class="c-lead c-lead--xxl">
+                                    For Community <br>
+                                    Oncology
+                                </h2>
+                            </header>
+                            <div class="u-max-width-sm">
+                                <p class="c-lead c-lead--lg">
+                                    OncoCloud is the most comprehensive suite of software and services in community oncology. Using our technology, community clinics are providing better care for patients while remaining efficient, independent and financially successful.
+                                </p>
+                                <p>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>      
+                </article>
+                <article>
+                    <div class="o-section o-section--lg">
+                        <div class="o-layout o-layout--row-reverse">
+                            <div class="o-layout__item u-1-of-2-bp3">
+                                <figure>
+                                    <picture>
+                                        <source srcset="img/jpg/img-2.jpg" media="(min-width: 992px)">
+                                        <source srcset="img/jpg/img-2-landscape@2x.jpg" media="(min-width: 576px)">
+                                        <img src="img/jpg/img-2-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                    </picture>
+                                    <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
+                                </figure>
+                            </div>
+                            <div class="o-layout__item u-1-of-2-bp3  o-layout__centering">
+                                <header>
+                                    <h2  class="c-lead c-lead--xxl">
+                                        For Life <br>
+                                        Sciences
+                                    </h2>
+                                </header>
+                                <p  class="c-lead c-lead--lg">
+                                    With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
+                                </p>
+                                <p>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </article>
-                <article class="o-layout o-layout--gutter o-layout--row-reverse">
-                    <figure class="o-layout__item u-1-of-2-bp3">
-                        <picture>
-                            <source srcset="img/jpg/img-2.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-2-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-2-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
-                    </figure>
-                    <div class="o-layout__item u-1-of-2-bp3 o-layout--justify-center o-col">
-                        <header>
-                            <h2>
-                                For Life <br>
-                                Sciences
-                            </h2>
-                        </header>
-                        <p>
-                            With access to billions of data points on millions of cancer patients treated across our network, Flatiron is changing the way life science companies are using real-world data to accelerate research and generate evidence.
-                        </p>
-                        <p>
-                            <a href="#!">Learn more</a>
-                        </p>
-                    </div>
-                </article>
-                <article class="o-layout o-layout--gutter">
-                    <figure class="o-layout__item u-1-of-2-bp3">
-                        <picture>
-                            <source srcset="img/jpg/img-3.jpg" media="(min-width: 992px)">
-                            <source srcset="img/jpg/img-3-landscape@2x.jpg" media="(min-width: 576px)">
-                            <img src="img/jpg/img-3-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
-                        </picture>
-                        <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
-                    </figure>
-                    <div class="o-layout__item u-1-of-2-bp3 o-layout--justify-center o-col">
-                        <header>
-                            <h2>
-                                For Academics <br>
-                                &amp; Hospitals
-                            </h2>
-                        </header>
-                        <p>
-                            Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their institution.
-                        </p>
-                        <p>
-                            <a href="#!">Learn more</a>
-                        </p>
+                <article>
+                    <div class="o-section o-section--lg">
+                        <div class="o-layout">
+                            <div class="o-layout__item u-1-of-2-bp3">
+                                <figure>
+                                    <picture>
+                                        <source srcset="img/jpg/img-3.jpg" media="(min-width: 992px)">
+                                        <source srcset="img/jpg/img-3-landscape@2x.jpg" media="(min-width: 576px)">
+                                        <img src="img/jpg/img-3-landscape.jpg" alt="Dr. Jeremy McDuffie, Tennessee Oncology">
+                                    </picture>
+                                    <figcaption>The lab at New York Cancer & Blood Specialists</figcaption>
+                                </figure>
+                            </div>
+                            <div class="o-layout__item u-1-of-2-bp3  o-layout__centering">
+                                <header>
+                                    <h2 class="c-lead c-lead--xxl">
+                                        For Academics <br>
+                                        &amp; Hospitals
+                                    </h2>
+                                </header>
+                                <p class="c-lead c-lead--lg">
+                                    Flatiron’s enriched data infrastructure helps hospitals and academic centers unlock the promise of their EHR data. Researchers and clinicians now have access to research-grade insights from within and beyond the walls of their institution.
+                                </p>
+                                <p>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </article>
             </div>
@@ -187,7 +190,7 @@
                 <div class="o-section o-section--xl">
                     <div class="o-container u-max-width-md">
                         <header class="o-section">
-                            <h2 class="c-lead c-lead--xxxl u-color-primary-base">
+                            <h2 class="c-lead c-lead--xxl u-color-primary-base">
                                 Do well by doing good. Join the leading tech company in the fight against cancer.
                             </h2>
                         </header>
@@ -206,37 +209,37 @@
                         </div>
                     </div>
                 </div>
-                <div class="o-section o-section--xl">
-                    <div class="o-section o-section--lg">
-                        <figure class="c-figure">
-                            <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
-                        </figure>
-                    </div>
-                    <div class="o-section o-section--lg">
-                        <div class="o-layout o-layout--gutter-lg">
-                            <div class="o-layout__item u-1-of-2-bp3">
-                                <div class="u-max-width-sm">
-                                    <h3 class="c-lead c-lead--xl">
-                                        Life at Flatiron
-                                    </h3>
-                                </div>
+            <div class="o-section o-section--xl">
+                <div class="o-section o-section--lg">
+                    <figure class="c-figure">
+                        <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
+                    </figure>
+                </div>
+                <div class="o-section o-section--lg">
+                    <div class="o-layout o-layout--gutter-lg">
+                        <div class="o-layout__item u-1-of-2-bp3">
+                            <div class="u-max-width-sm">
+                                <h3 class="c-lead c-lead--xl">
+                                    Life at Flatiron
+                                </h3>
                             </div>
-                            <div class="o-layout__item u-1-of-2-bp3">
-                                <div class="u-max-width-sm">
-                                    <p class="c-lead c-lead--lg">
-                                        The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.
-                                    </p>
-                                    <p>
-                                        <a class="c-link-cta" href="#!">Open positions</a>
-                                    </p>
-                                </div>
+                        </div>
+                        <div class="o-layout__item u-1-of-2-bp3">
+                            <div class="u-max-width-sm">
+                                <p class="c-lead c-lead--lg">
+                                    The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re passionate about having an impact on accelerating cancer research and improving patient care, we’d love to hear from you.
+                                </p>
+                                <p>
+                                    <a class="c-link-cta" href="#!">Open positions</a>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </section>
-        <section class="o-row o-row--lg o-row--gradient-1">
+        <section class="o-row o-row--lg o-row--gradient">
             <div class="o-container">
                 <div class="o-layout o-layout--gutter-lg">
                     <div class="o-layout__item u-1-of-2-bp2">
